[package]
name = "orbita"
version = "0.1.0"
edition = "2024"
description = "🪐 The easiest way to rename extensions massive amounts of files"
categories = ["development-tools", "command-line-utilities", "filesystem"]
keywords = ["development-tools", "develop", "tools"]
authors = ["Wilovy09"]
license = "MIT"
repository = "https://github.com/Wilovy09/orbita"
homepage = "https://github.com/Wilovy09/orbita"
readme = "README.md"
include = ["**/**/*.rs", "Cargo.toml"]
exclude = ["static/**/*"]

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
regex = "1.11.1"
walkdir = "2.5.0"

[[bin]]
name = "orbita"
path = "src/main.rs"

[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
cargo-dist-version = "0.13.2"
ci = ["github"]
installers = ["shell", "powershell", "homebrew"]
tap = "Wilovy09/homebrew-tap"
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
publish-jobs = ["homebrew"]
pr-run-mode = "plan"
